@@ -1104,3 +1104,4 @@
 ( cvs diff -u -r 1.1.2.2 -r 1.1.2.3 manual/keyboard.xml;  ) > 1.9.100cvs118.patchset
 ( cvs diff -u -r 1.382.2.212 -r 1.382.2.213 src/compose.c;  cvs diff -u -r 1.179.2.87 -r 1.179.2.88 src/imap.c;  ) > 1.9.100cvs119.patchset
 ( cvs diff -u -r 1.94.2.71 -r 1.94.2.72 src/messageview.c;  ) > 1.9.100cvs120.patchset
+( cvs diff -u -r 1.5.2.3 -r 1.5.2.4 src/common/prefs.c;  cvs diff -u -r 1.1.2.15 -r 1.1.2.16 src/plugins/pgpcore/sgpgme.c;  ) > 1.9.100cvs121.patchset
