@@ -282,8 +282,23 @@ gchar *sgpgme_sigstat_info_full(gpgme_ctx_t ctx, gpgme_verify_result_t status)
 			g_string_append_printf(siginfo,
 				_("Primary key fingerprint: %s\n"), 
 				sig ? sig->fpr: "?");
+#ifdef HAVE_GPGME_PKA_TRUST
+                        if (sig->pka_trust == 1 && sig->pka_address) {
+                                g_string_append_printf(siginfo,
+                                   _("WARNING: Signer's address \"%s\" "
+                                      "does not match DNS entry\n"), 
+                                   sig->pka_address);
+                        }
+                        else if (sig->pka_trust == 2 && sig->pka_address) {
+                                g_string_append_printf(siginfo,
+                                   _("Verified signer's address is \"%s\"\n"),
+                                   sig->pka_address);
+                                /* FIXME: Compare the address to the
+                                 * From: address.  */
+                        }
+#endif /*HAVE_GPGME_PKA_TRUST*/
 		}
-		
+
 		g_string_append(siginfo, "\n");
 		i++;
 		sig = sig->next;
